# pkgviz-python

./: .pre-commit-config.yaml  Makefile  README.md  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  labeler.yml
.github/workflows/: code-check.yaml  pkgviz-ci.yaml  publish.yaml
src/pkgviz/: __init__.py  cli.py  engine.py  types.py  utils.py
tests/: test_cli.py  test_engine.py  test_types.py
