[metadata]
name = pkgviz
version = attr: pkgviz.__version__
author = attr: pkgviz.__author__
description = attr: pkgviz.__doc__
long_description = file: README.md
log_description_content_type = text/markdown
url = attr: pkgviz.__url__
classifiers = 
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
package_dir = 
	= src
packages = find_namespace:
python_requires = >=3.7,<3.11
install_requires = 
	click
	graphviz
	rich

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	pkgviz = pkgviz:cli.main

[mypy]
ignore_missing_imports = True
